--- a/GoHotel/src/main/resources/application.properties
+++ b/GoHotel/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 spring.application.name=GoHotel
-
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/go_hotel_db
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/go_hotel_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=10
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
+#JPA/Hibernate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+
+# JWT Configuration
+jwt.secret=zXp4s7w!z%C*F-JaNdRgUkXn2r5u8x/A?D(G+KbPeShVmYq3t6v9y$B&E)H@McQf
