--- a/GoHotel/src/main/resources/application.properties
+++ b/GoHotel/src/main/resources/application.properties
@@ -2,14 +2,22 @@ spring.application.name=GoHotel
 server.port=8080
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/go_hotel_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=10
+
+spring.servlet.multipart.max-file-size=2GB
+spring.servlet.multipart.max-request-size=2GB
 
 #JPA/Hibernate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+
+#AWS S3 Configuration
+aws.s3.secret.key=${SECRET_KEY}
+aws.s3.access.key=${ACCESS_KEY}
+bucket-name=${BUCKET_NAME}
